--- a/.github/workflows/learninglabauto.yml
+++ b/.github/workflows/learninglabauto.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Execute Python script
         run: |
           python scripts/learninglabauto.py
+          
+      - name: setup git config
+        run: |
+          git config user.name ${{ secrets.USERNAME }}
+          git config user.email ${{ secrets.EMAIL }}
 
       - name: commit changes
         run: |
