add http routing + attempt at cloning repo

--- a/github-app/package.json
+++ b/github-app/package.json
@@ -16,6 +16,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@octokit/core": "^3.2.5",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "js-yaml": "^4.0.0",
     "probot": "^11.0.5",
     "ruby": "^0.6.1"
